Try without ssh

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run ansible-lint
       uses: ansible/ansible-lint-action@master
-    - name: Prepare ssh
-      run: |
-        ssh-keygen -N "" -f ~/.ssh/id_rsa
-        ssh-copy-id localhost
     - name: Execute ansible playbook
-      run: ansible-playbook playbook.yml -i localhost
+      run: ansible-playbook playbook.yml -i local
