Skip whole apt upgrade
This doesn't seem to work for github actions and it's taking a very long
time as well

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Execute ansible playbook
       run: |
         ansible-playbook playbook.yml -i local \
-          --extra-vars "official_apt_sources_replacements=[]"
+          --skip-tags apt_upgrade
