--- a/baztian.git/tasks/main.yml
+++ b/baztian.git/tasks/main.yml
@@ -14,3 +14,17 @@
   with_dict:
     "{{ git_config }}"
   become: no
+- name: Clone bash-git-prompt
+  git:
+    repo: https://github.com/magicmonty/bash-git-prompt.git
+    dest: /opt/bash-git-prompt
+    version: 9733b12b3441424ad47d4f42977578e8c9d89438
+- name: Add bash-git-prompt config to .bashrc
+  blockinfile:
+    path: ~/.bashrc
+    block: |
+      if [ -f "/opt/bash-git-prompt/gitprompt.sh" ]; then
+        GIT_PROMPT_ONLY_IN_REPO=1
+        source /opt/bash-git-prompt/gitprompt.sh
+      fi
+  become: no
