--- a/baztian.git/tasks/main.yml
+++ b/baztian.git/tasks/main.yml
@@ -18,13 +18,17 @@
   git:
     repo: https://github.com/magicmonty/bash-git-prompt.git
     dest: /opt/bash-git-prompt
-    version: 9733b12b3441424ad47d4f42977578e8c9d89438
+    version: "{{ bash_git_prompt_version }}"
 - name: Add bash-git-prompt config to .bashrc
   blockinfile:
     path: ~/.bashrc
     block: |
       if [ -f "/opt/bash-git-prompt/gitprompt.sh" ]; then
         GIT_PROMPT_ONLY_IN_REPO=1
+        GIT_PROMPT_THEME="Single_line_Dark"
+        function prompt_callback {
+            gp_set_window_title "\u@\h: $(gp_truncate_pwd)"
+        }
         source /opt/bash-git-prompt/gitprompt.sh
       fi
   become: no
