--- a/baztian.git/defaults/main.yml
+++ b/baztian.git/defaults/main.yml
@@ -25,3 +25,4 @@ git_config:
   mergetool.keepbackups: "false"
   mergetool.prompt: "false"
 bash_git_prompt_version: 9733b12b3441424ad47d4f42977578e8c9d89438
+hub_version: 2.12.8
