--- a/baztian.jetbrains_toolbox/tasks/main.yml
+++ b/baztian.jetbrains_toolbox/tasks/main.yml
@@ -1,8 +1,9 @@
 ---
 - name: Check if already installed
   stat:
-    path: "/opt/jetbrains-toolbox-{{ jetbrains_toolbox_version }}"
+    path: ~/.local/share/JetBrains/Toolbox
   register: jetbrains_toolbox_directory
+  become: no
 - name: Download JetBrains Toolbox
   get_url:
     url: https://download.jetbrains.com/toolbox/jetbrains-toolbox-{{ jetbrains_toolbox_version }}.tar.gz
@@ -12,11 +13,25 @@
 - name: Unarchive JetBrains Toolbox
   unarchive:
     src: /tmp/jetbrains-toolbox-{{ jetbrains_toolbox_version }}.tar.gz
-    dest: /opt/
+    dest: /tmp
     remote_src: yes
   when: not jetbrains_toolbox_directory.stat.exists
-- name: Symlink default JetBrains Toolbox
+- name: Create Toolbox bin directory
   file:
-    src: "/opt/jetbrains-toolbox-{{ jetbrains_toolbox_version }}"
-    dest: "/opt/jetbrains-toolbox"
-    state: link
+    path: ~/.local/share/JetBrains/Toolbox/bin
+    state: directory
+  become: no
+- name: Move JetBrains Toolbox binary
+  command: mv /tmp/jetbrains-toolbox-{{ jetbrains_toolbox_version }}/jetbrains-toolbox ~/.local/share/JetBrains/Toolbox/bin/jetbrains-toolbox
+  become: no
+  when: not jetbrains_toolbox_directory.stat.exists
+- name: Create launcher directory
+  file:
+    path: ~/.local/share/applications
+    state: directory
+  become: no
+- name: Copy JetBrains Toolbox desktop launcher
+  template:
+    src: templates/jetbrains-toolbox.desktop.j2
+    dest: ~/.local/share/applications/jetbrains-toolbox.desktop
+  become: no
