Install required xfconf

--- a/baztian.xfce/tasks/main.yml
+++ b/baztian.xfce/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Install required packages
+# This should usually be in place if using an xfce distro
+  apt:
+    pkg:
+      - xfconf
 - block:
   - name: Solid background
     xfconf:
