--- a/baztian.git/tasks/main.yml
+++ b/baztian.git/tasks/main.yml
@@ -20,9 +20,10 @@
     dest: /opt/bash-git-prompt
     depth: 1
     version: "{{ bash_git_prompt_version }}"
-- name: Add bash-git-prompt config to .bashrc
+- name: Add bash-git-prompt config
   blockinfile:
     path: ~/.bashrc
+    marker: "# {mark} ANSIBLE MANAGED BLOCK bash-git-prompt"
     block: |
       if [ -f "/opt/bash-git-prompt/gitprompt.sh" ]; then
         GIT_PROMPT_ONLY_IN_REPO=1
@@ -51,9 +52,10 @@
 - name: Add hub git alias and setup bash completion
   blockinfile:
     path: ~/.bashrc
+    marker: "# {mark} ANSIBLE MANAGED BLOCK git hub"
     block: |
       eval "$(hub alias -s)"
-      if [ -f ~/Software/hub/etc/hub.bash_completion.sh ]; then
-        . ~/Software/hub/etc/hub.bash_completion.sh
+      if [ -f /opt/hub/etc/hub.bash_completion.sh ]; then
+        . /opt/hub/etc/hub.bash_completion.sh
       fi
   become: no
