--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,6 @@ jobs:
       uses: ansible/ansible-lint-action@master
     - name: Execute ansible playbook
       run: |
-        export $(dbus-launch)
-        eval $(dbus-launch --sh-syntax)
-        export DBUS_SESSION_BUS_ADDRESS
-        export DBUS_SESSION_BUS_PID
+        export DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/$USER/bus
         ansible-playbook playbook.yml -i local \
           --skip-tags apt_upgrade
