--- a/baztian.docker/tasks/main.yml
+++ b/baztian.docker/tasks/main.yml
@@ -40,7 +40,7 @@
   lineinfile:
     path: ~/.bashrc
     regexp: '^alias dockstats='
-    line: "{% raw %}alias dockstats='docker stats --no-stream --format \"table {{.Name}}\t{{.Container}}\t{{.CPUPerc}}\t{{.MemUsage}}\"'{% endraw %}"
+    line: "{% raw %}alias dockstats='docker stats --no-stream --format \"table {{.Name}}\t{{.Container}}\t{{.CPUPerc}}\t{{.MemUsage}}\"'{% endraw %}" # noqa 206
   become: no
 - name: Download Docker Compose
   get_url:
