--- a/baztian.keepass/tasks/main.yml
+++ b/baztian.keepass/tasks/main.yml
@@ -1,23 +1,36 @@
 ---
-- name: Add Apt signing key on remote server to keyring
+- name: Extract distribution base name (works on linux mint as well)
+  command: grep -oP 'UBUNTU_CODENAME=\K.*' /etc/os-release
+  register: distro
+  changed_when: False
+- name: Add Keepass Apt signing key on remote server to keyring
   apt_key:
     data: "{{ lookup('file', 'julianTaylorPPA.gpg') }}"
     id: 57A0E8DEA026F8D8173E90A57858088158B80F90
     # setting keyring required to not collide with
     state: present
-- name: Extract distribution base name (works on linux mint as well)
-  command: grep -oP 'UBUNTU_CODENAME=\K.*' /etc/os-release
-  register: distro
-  changed_when: False
-- name: Add apt repo for keepass
+- name: Add apt repo for Keepass 2
   apt_repository:
-    repo: deb http://ppa.launchpad.net/jtaylor/keepass/ubuntu {{ distro.stdout }} main
+    repo: "{{ item  }} http://ppa.launchpad.net/jtaylor/keepass/ubuntu {{ distro.stdout }} main"
     state: present
-- name: Add apt repo for keepass sources
+  with_items: 
+    - deb
+    - deb-src
+- name: Add KeepassKeeFox Plugin Apt signing key on remote server to keyring
+  apt_key:
+    data: "{{ lookup('file', 'davidLechnerPPA.gpg') }}"
+    id: A8BD96F8FD24E96B60232807B3B4C3CECC10C662
+    # setting keyring required to not collide with
+    state: present
+- name: Add apt repo for KeeFox Plugin
   apt_repository:
-    repo: deb-src http://ppa.launchpad.net/jtaylor/keepass/ubuntu {{ distro.stdout }} main
+    repo: "{{ item  }} http://ppa.launchpad.net/dlech/keepass2-plugins/ubuntu {{ distro.stdout }} main"
     state: present
+  with_items: 
+    - deb
+    - deb-src
 - name: Install keepass packages
   apt:
     pkg:
       - keepass2
+      - keepass2-plugin-rpc
