--- a/baztian.other_apt_installs/tasks/main.yml
+++ b/baztian.other_apt_installs/tasks/main.yml
@@ -17,3 +17,18 @@
   apt:
     deb: "/tmp/teams-for-linux_{{ ms_teams_version }}_amd64.deb"
   tags: ms_teams
+- name: Add Spotify signing key on remote server to keyring
+  apt_key:
+    data: "{{ lookup('file', 'spotify.gpg') }}"
+    id: 2EBF997C15BDA244B6EBF5D84773BD5E130D1D45
+    state: present
+  tags: spotify
+- name: Add apt repo for Spotify
+  apt_repository:
+    repo: "deb http://repository.spotify.com stable non-free"
+    state: present
+  tags: spotify
+- name: Install Spotify package
+  apt:
+    pkg: spotify-client
+  tags: spotify
