--- a/playbook.yml
+++ b/playbook.yml
@@ -16,5 +16,7 @@
       tags: vscode
     - role: baztian.jetbrains_toolbox
       tags: jetbrains_toolbox
+    - role: baztian.js
+      tags: js
     - role: baztian.other_apt_installs
       tags: other_apt_installs
