--- a/baztian.js/tasks/main.yml
+++ b/baztian.js/tasks/main.yml
@@ -18,3 +18,18 @@
 - name: Install NodeJS
   apt:
     pkg: nodejs
+- name: Add yarn signing key on remote server to keyring
+  apt_key:
+    url: https://dl.yarnpkg.com/debian/pubkey.gpg
+    id: 72ECF46A56B4AD39C907BBB71646B01B86E50310
+    state: present
+  tags: yarn
+- name: Add apt repo for yarn
+  apt_repository:
+    repo: "deb https://dl.yarnpkg.com/debian/ stable main"
+    state: present
+  tags: yarn
+- name: Install yarn
+  apt:
+    pkg: yarn
+  tags: yarn
