Install browser-sync

--- a/baztian.js/tasks/main.yml
+++ b/baztian.js/tasks/main.yml
@@ -33,3 +33,10 @@
   apt:
     pkg: yarn
   tags: yarn
+- name: Install browser-sync
+  npm:
+    name: browser-sync
+    global: yes
+  environment:
+    npm_config_prefix: /usr/local
+  tags: browser-sync
