--- a/baztian.js/tasks/main.yml
+++ b/baztian.js/tasks/main.yml
@@ -10,7 +10,7 @@
     state: present
 - name: Add apt repo for Nodejs
   apt_repository:
-    repo: "{{ item  }} https://deb.nodesource.com/node_10.x {{ distro.stdout }} main"
+    repo: "{{ item  }} https://deb.nodesource.com/node_{{ node_major_release }}.x {{ distro.stdout }} main"
     state: present
   with_items:
     - deb
