Improve task's name

--- a/baztian.dev_tools/tasks/main.yml
+++ b/baztian.dev_tools/tasks/main.yml
@@ -12,7 +12,7 @@
   vars:
       pkg: yq
   tags: yq
-- name: Check if already installed
+- name: Check if Postman App already installed
   stat:
     path: /opt/Postman{{ postman_version }}
   register: postman_directory
