--- a/baztian.dev_tools/tasks/main.yml
+++ b/baztian.dev_tools/tasks/main.yml
@@ -11,6 +11,7 @@
         - yq
   vars:
       pkg: yq
+      version: 2.8.0
   tags: yq
 - name: Install jpterm
   include_role:
@@ -20,6 +21,7 @@
         - jpterm
   vars:
       pkg: jmespath-terminal
+      version: 0.2.1
       bin: jpterm
   tags: jpterm
 - name: Check if Postman App already installed
