--- a/baztian.pip_venv/tasks/main.yml
+++ b/baztian.pip_venv/tasks/main.yml
@@ -1,18 +1,27 @@
 ---
+- fail:
+    msg: Failed installing python package {{ pkg }}. 'version' attribute required.
+  when: not version
 - name: Install python venv to allow for software install inside virtual
         python environments
   apt:
     pkg: python3-venv
-- name: Prepare virtual env for {{ pkg }} python package
-  command: python3 -m venv /opt/{{ pkg }}
+- name: Prepare virtual env for {{ pkg }} python package version {{ version }}
+  command: python3 -m venv /opt/{{ pkg }}-{{ version }}
   args:
-    creates: /opt/{{ pkg }}
-- name: Install {{ pkg }} python package
-  command: /opt/{{ pkg }}/bin/pip install {{ pkg }}
+    creates: /opt/{{ pkg }}-{{ version }}
+- name: Install {{ pkg }} python package version {{ version }}
+  command: /opt/{{ pkg }}-{{ version }}/bin/pip install {{ pkg }}=={{ version }}
   args:
-    creates: /opt/{{ pkg }}/bin/{{ bin }}
-- name: Symlink binary from python package
+    creates: /opt/{{ pkg }}-{{ version }}/bin/{{ bin if bin is string else bin[-1] }}
+- name: Symlink default version {{ version }} for {{ pkg }} python package
   file:
-    src: "/opt/{{ pkg }}/bin/{{ bin }}"
-    dest: "/usr/local/bin/{{ bin }}"
+    src: "{{ pkg }}-{{ version }}"
+    dest: "/opt/{{ pkg }}"
     state: link
+- name: Symlink binary from {{ pkg }} python package
+  file:
+    src: "/opt/{{ pkg }}/bin/{{ item }}"
+    dest: "/usr/local/bin/{{ item }}"
+    state: link
+  with_items: "{{ bin }}"
