--- a/baztian.dev_tools/tasks/main.yml
+++ b/baztian.dev_tools/tasks/main.yml
@@ -55,6 +55,42 @@
       version: 0.2.1
       bin: jpterm
   tags: jpterm
+- name: Check if jid already installed
+  stat:
+    path: /opt/jid-{{ jid_version }}
+  register: jid_directory
+  tags: jid
+- name: Download jid
+  get_url:
+    url: "https://github.com/simeji/jid/releases/download/v{{ jid_version }}/jid_linux_amd64.zip"
+    checksum: "sha256:{{ jid_sha256 }}"
+    dest: "/tmp/jid-{{ jid_version }}.zip"
+  tags: jid
+  when: not jid_directory.stat.exists
+- name: Create jid directory
+  file:
+    path: "/opt/jid-{{ jid_version }}"
+    state: directory
+  tags: jid
+- name: Install jid
+  unarchive:
+    src: "/tmp/jid-{{ jid_version }}.zip"
+    dest: "/opt/jid-{{ jid_version }}"
+    remote_src: yes
+  tags: jid
+  when: not jid_directory.stat.exists
+- name: Symlink default jid
+  file:
+    src: "jid-{{ jid_version }}"
+    dest: "/opt/jid"
+    state: link
+  tags: jid
+- name: Symlink jid bin
+  file:
+    src: "/opt/jid/jid"
+    dest: "/usr/local/bin/jid"
+    state: link
+  tags: jid
 - name: Check if Postman App already installed
   stat:
     path: /opt/Postman-{{ postman_version }}
