Reverting to older ansible-lint action in the hope of fixing build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run ansible-lint
-      uses: ansible/ansible-lint-action@master
+      uses: ansible/ansible-lint-action@775c5d
     - name: Execute ansible playbook
       run: |
         ansible-playbook playbook.yml -i local \
