--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run ansible-lint
-      uses: ansible/ansible-lint-action@fcaf1b6
+#    - name: Run ansible-lint
+#      uses: ansible/ansible-lint-action@fcaf1b6
     - name: Execute ansible playbook
       run: |
         ansible-playbook playbook.yml -i local \
