--- a/baztian.java/tasks/main.yml
+++ b/baztian.java/tasks/main.yml
@@ -63,10 +63,9 @@
     dest: "/opt/payara"
     state: link
   tags: payara
-- name: Add asadmin alias
-  lineinfile:
-    path: ~/.bashrc
-    regexp: '^alias asadmin='
-    line: alias asadmin='/opt/payara/bin/asadmin'
-  become: no
+- name: Add asadmin executable
+  copy:
+    src: asadmin
+    dest: /usr/local/bin
+    mode: '0755'
   tags: payara
