Fix insomnia launcher icon

--- a/baztian.dev_tools/tasks/main.yml
+++ b/baztian.dev_tools/tasks/main.yml
@@ -18,6 +18,11 @@
   apt:
     pkg: insomnia
   tags: insomnia
+- name: Add fixed launcher for Insomnia
+  copy:
+    src: insomnia.desktop
+    dest: /usr/local/share/applications/insomnia.desktop
+  tags: insomnia
 - name: Install ansible
   include_role:
     name: baztian.pip_venv
