Vagrant and Virtualbox

--- a/playbook.yml
+++ b/playbook.yml
@@ -24,3 +24,5 @@
       tags: dev_tools
     - role: baztian.other_apt_installs
       tags: other_apt_installs
+    - role: baztian.vagrant
+      tags: vagrant
