Calibre e-book library management

--- a/playbook.yml
+++ b/playbook.yml
@@ -26,5 +26,7 @@
       tags: dev_tools
     - role: baztian.other_apt_installs
       tags: other_apt_installs
+    - role: baztian.calibre
+      tags: calibre
     - role: baztian.vagrant
       tags: vagrant
