--- a/baztian.aws/tasks/main.yml
+++ b/baztian.aws/tasks/main.yml
@@ -84,4 +84,4 @@
     src: /opt/terraform/terraform
     dest: /usr/local/bin/terraform
     state: link
-  tags: terraform
+  tags: terraform,no_github
