Move python-docker package installation to baztian.docker role

--- a/baztian.docker/tasks/main.yml
+++ b/baztian.docker/tasks/main.yml
@@ -28,6 +28,7 @@
     - docker-ce
     - docker-ce-cli
     - containerd.io
+    - python-docker # required by ansible docker modules
 - name: Create docker group
   group:
     name: docker
